--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - "8080"
     volumes:
       - ./app:/app
+    env_file:
+      - .env
     restart: always
     depends_on:
       db:
@@ -28,9 +30,12 @@ services:
   db:
     image: postgres:17-alpine3.20
     ports:
-      - "5432"
+      # - "5432"
+      - "5432:5432"
     volumes:
       - ./db:/var/lib/postgresql/data
+    env_file:
+      - .env
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} || exit 1"]
       interval: 10s
@@ -38,10 +43,6 @@ services:
       retries: 5
       start_period: 5s
     restart: always
-    environment:
-      POSTGRES_DB: db
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: postgres
   redis:
     image: redis:8.0-M02-alpine3.20
     ports:
