feat: impl downling assets

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "8080"
     volumes:
       - ./app:/app
     env_file:
@@ -27,4 +25,12 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+    restart: always
+  example:
+    image: python:3.12.3-alpine3.18
+    volumes:
+      - ./example:/app
+    ports:
+      - "8080:80"
+    command: ["python", "-m", "http.server", "80", "--directory", "/app"]
     restart: always
